# modeling_and_simulation

./: README.md  lab01.py  setup.py
mass-spring-damper/: model.py  setup.py
n-body-problem/: CMakeLists.txt  README.md  main.cpp
n-body-problem/includes/: Body.h  Constants.h  Description.h  EinstainGrid.h  LinearSpectrum.h  LinearVidmo.h  MassCenter.h  MetricGrid.h  PotentialGrid.h  Simulation.h  SpaceGrid.h  Spectrum.h  Vidmo.h
n-body-problem/includes/grid/: EinsteinGrid.h  Grid.h  MetricGrid.h  VectorsGrid.h
n-body-problem/includes/solver/: Euler.h  RungeKutta.h  Solver.h  Trapezoidal.h
n-body-problem/includes/spectrum/: InfinitySpectrum.h  LinearSpectrum.h  ListSpectrum.h  Spectrum.h
n-body-problem/model/: main.tex
n-body-problem/model/source/: main.tex
n-body-problem/src/: Body.cpp  Description.cpp  EinstainGrid.cpp  LinearSpectrum.cpp  LinearVidmo.cpp  MassCenter.cpp  MetricGrid.cpp  PotentialGrid.cpp  Simulation.cpp  SpaceGrid.cpp
n-body-problem/src/grid/: EinsteinGrid.cpp  MetricGrid.cpp  VectorsGrid.cpp
n-body-problem/src/solver/: Euler.cpp
n-body-problem/src/spectrum/: InfinitySpectrum.cpp  LinearSpectrum.cpp  ListSpectrum.cpp
